Fix bullet alignment on Grant details, change co-pi label (#623)
* Add some left padding on .row ul

* Fix co-pi label

--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -124,6 +124,9 @@ th.table-header {
 .submission-funders .row {
   padding: 0;
 }
+.grant-details .row ul {
+  padding-left: 35px;
+}
 
 .policies-list {
   h6 {
